--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container {
     width: 100%;
     height: 100vh;
+    overflow: hidden;
 }
+
+main{
+    height: calc(100% - 90px);
+    display: flex;
+}
+
+
 /* Classi riutilizzabili */
 .arancio{
     background-color: coral;
@@ -48,17 +57,40 @@
     width: calc(100% - 250px);
     margin-left: 250px;
     padding-top: 100px;
+    overflow-y: scroll;
 }
 
 .call-to-action{
     width: calc(100% - 250px);
     height: 100px;
+    line-height: 100px;
+    background-color: rgba(0, 0, 0, 0.75);
     position: fixed;
     top: 0;
     right: 0;
     z-index: 1;
-
+    text-align: right;
 }
+
+.button-upgrade{
+    color: white;
+    border: 1px solid white;
+    padding: 20px 30px;
+    border-radius: 20px;
+    margin-right: 2%;
+}
+
+.button-upgrade:hover{
+    background-color: white;
+    color: rgba(0, 0, 0, 0.75);
+    border: 1px solid rgba(0, 0, 0, 0.75);
+}
+
+a.button-upgrade{
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 /* /Main Content */
 
 /* Footer */
