--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ a{
     text-align: right;
 }
 
-.button-upgrade{
+.call-to-action .button-upgrade{
     color: white;
     border: 1px solid white;
     padding: 10px 30px;
@@ -267,10 +267,11 @@ a{
     margin-right: 2%;
 }
 
-.button-upgrade:hover{
+.call-to-action .button-upgrade:hover{
     background-color: white;
     color: rgba(0, 0, 0, 0.75);
     border: 1px solid rgba(0, 0, 0, 0.75);
+    transform: scale(1.5);
 }
 
 a.button-upgrade{
@@ -425,7 +426,185 @@ footer{
     bottom: 0;
     left: 0;
     background-color: #282828;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
+/* Left */
+.left-artist{
+    width: 250px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.left-artist .text-album{
+    font-weight: 600;
+}
+
+.text-album{
+    margin-right: 20px;
+}
+
+.text-album p{
+    font-size: .9em;
+    text-align: left;
+}
+
+.text-album a:hover{
+    opacity: 100%;
+    text-decoration: underline;
+}
+
+.text-album .small{
+    opacity: 65%;
+    font-size: 0.7em;
+}
+
+.left-artist img{
+    width: 18%;
+    margin: 0 10px;
+}
+
+.left-like ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 5px;
+    font-size: 1.1em;
+    opacity: 65%;
+}
+
+.left-like ul li:hover{
+    opacity: 100%;
+    text-shadow: 0px 0px 10px white;
+}
+/* /Left */
+
+/* Center */
+.footer-center{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.progress-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.progress-bar p{
+    font-weight: 600;
+    font-size: .6em;
+    margin: 0 15px;
+    padding-bottom: 10px;
+}
+
+.progress{
+    width: 90%;
+    background-color:#5a5a5a;
+    border-radius: 5px;
+    position: relative;
+}
+
+.progress .bar{
+    background-color:#c1c1c1;
+    width: 30%;
+    height: 4.5px;
+    border-radius: 5px;
+}
+
+.progress .bar:hover,
+.vol-bar .bar:hover{
+    background-color: lime;
+}
+
+.progress .bar:hover::after,
+.vol-bar .bar:hover::after{
+    content: '';
+    display: block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: white;
+    top: 50%;
+    left: 100%;
+    position: relative;
+    transform: translate(-50%, -50%);
+}
+
+
+.play-button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.play-button ul{
+    display: flex;
+    align-items: center;
+}
+
+.play-button ul li{
+    list-style: none;
+    display: inline-block;
+    font-size: 1.2em;
+    padding: 10px;
+}
+
+.play-button ul li:hover,
+.vol-button ul li:hover{
+    text-shadow: 0px 0px 10px white;
+}
+
+.play-button ul li .bigger{
+    font-size: 1.6em;
+}
+
+.play-button ul li .bigger:hover{
+    transform: scale(1.5);
+}
+
+
+/* /Center */
+
+/* Right */
+.footer-right{
+    width: 250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+}
+
+.vol-button ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 5px;
+    font-size: .95em;
+}
+
+.vol-bar{
+    width: 50%;
+    margin: 0 5px;
+    background-color:#5a5a5a;
+    border-radius: 5px;
+}
+
+.vol-bar .bar {
+    background-color:#c1c1c1;
+    width: 30%;
+    height: 4.5px;
+    border-radius: 5px;
+}
+
+/* /Right */
+
 /* /Footer */
 
 /* Media Query */
